# year-zero-engine-srd

./: .gitignore  CLAUDE.md  README.md  chapters.json  gh-clone.sh  glossary.json  glossary.schema.json  middleware.ts  pyproject.toml  style-decisions.json  style-decisions.schema.json  vercel.json
.agents/skills/chapter-split/: SKILL.md  split-planner-prompt.md
.agents/skills/final-proofread/: SKILL.md
.agents/skills/init-doc/: SKILL.md
.agents/skills/new-project/: SKILL.md
.agents/skills/translate/: SKILL.md
.claude/: settings.json
.claude/hooks/: session-start.sh
.gemini/: settings.json
.gemini/commands/: chapter-split.toml  check-completeness.toml  check-consistency.toml  init-doc.toml  new-project.toml  super-translate.toml  term-decision.toml  translate.toml
.github/: template.yml
.github/workflows/: terminology-check.yml
api/: site-auth.ts
data/: translation-progress.json
docs/: .gitignore  astro.config.mjs  package.json
docs/plans/: 2026-03-09-scripts-refactor.md
scripts/: README.md  _epub_lib.py  _image_analysis.py  _layout_lib.py  _markdown_utils.py  _style_decisions_lib.py  _term_lib.py  clean_sample_data.py  draft.py  extract_pdf.py  generate_nav.py  init_create_progress.py  init_handoff_gate.py  split_chapters.py  style_decisions.py  term_cal_batch.py  term_edit.py  term_generate.py  term_read.py  validate_glossary.py  validate_style_decisions.py
scripts/tests/: conftest.py  test_epub_lib.py  test_extract_pdf.py  test_image_analysis.py  test_layout_lib.py  test_markdown_utils.py  test_split_chapters.py
tests/: test_scripts.py
(+46 files in other folders)
