[project]
name = "game-doc-scripts"
version = "1.0.0"
description = "PDF extraction and chapter splitting tools for game documentation"
requires-python = ">=3.11"
dependencies = [
    "inflect>=7.5.0",
    "jsonschema>=4.26.0",
    "markitdown[pdf]>=0.1.0",
    "pymupdf>=1.24.0",
    "spacy>=3.8.11",
    "spacy-lookups-data>=1.0.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
